# flet-shimmer

./: README.md  main.py  mkdocs.yml  pyproject.toml
Shimmer/: index.html
docs/: Shimmer.md  ShimmerDirection.md  index.md
examples/flet_shimmer_example/: pyproject.toml
examples/flet_shimmer_example/src/: main.py
site/: 404.html  index.html  objects.inv
site/ShimmerDirection/: index.html
src/flet_shimmer/: flet_shimmer.py
src/flutter/flet_shimmer/: README.md  pubspec.yaml
src/flutter/flet_shimmer/lib/: flet_shimmer.dart
src/flutter/flet_shimmer/lib/src/: create_control.dart  flet_shimmer.dart
src/flutter/flet_shimmer/lib/src/utils/: custom_shimmer.dart
