[project]
name = "flet-shimmer"
version = "0.1.0"
description = "Shimmer control for Flet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Julian Perez", email = "mordecaaii@gmail.com" }
]
dependencies = [
    "flet>=0.27.6",
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/ositoMalvado/flet-shimmer"
Repository = "https://github.com/ositoMalvado/flet-shimmer"
Issues = "https://github.com/ositoMalvado/flet-shimmer/issues"

[tool.setuptools.package-data]
"flutter.flet_shimmer" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
    "mkdocs", 
    "mkdocs-material",
    "mkdocstrings[python]"
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}
mkdocs = "*"
mkdocstrings = { extras = ["python"], version = "*" }
mkdocs-material = "*"

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
